--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,18 @@
 Package: lusweave
 Type: Package
-Title: Landuse Sweave Utilities
-Version: 1.43.4
-Date: 2017-11-29
-Author: Markus Bonsch, Jan Philipp Dietrich, Florian Humpenoeder
-Maintainer: Jan Philipp Dietrich <dietrich@pik-potsdam.de>
-Description: Set of tools which simplify the usage of SWeave in R and allow to easily create PDF files based on R data.
+Title: Sweave/Knitr Utilities
+Version: 1.44.0
+Date: 2018-01-26
+Authors@R: c(person("Markus", "Bonsch", role = "aut"),
+             person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
+             person("Florian", "Humpenoeder", email = "humpenoeder@pik-potsdam.de", role = "aut"))
+Description: Set of tools which simplify the usage of SWeave/Knitr in R and allow to easily create PDF files from within R.
 Depends: R(>= 2.10.0), methods
 Imports: xtable,  
 	 knitr,
 	 utils
+URL: https://github.com/pik-piam/lusweave, https://doi.org/10.5281/zenodo.1158594
+BugReports: https://github.com/pik-piam/lusweave/issues
 License: BSD_2_clause + file LICENSE
 LazyData: no
 RoxygenNote: 6.0.1
