--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: lusweave
 Type: Package
 Title: Sweave/Knitr Utilities
-Version: 1.45.0
-Date: 2018-02-08
+Version: 1.46.0
+Date: 2018-11-15
 Authors@R: c(person("Markus", "Bonsch", role = "aut"),
              person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
+             person("David", "Klein", email = "dklein@pik-potsdam.de", role = "aut"),
              person("Florian", "Humpenoeder", email = "humpenoeder@pik-potsdam.de", role = "aut"))
 Description: Set of tools which simplify the usage of SWeave/Knitr in R and allow to easily create PDF files from within R.
 Depends: R(>= 2.10.0), methods
@@ -15,4 +16,5 @@ URL: https://github.com/pik-piam/lusweave, https://doi.org/10.5281/zenodo.115859
 BugReports: https://github.com/pik-piam/lusweave/issues
 License: BSD_2_clause + file LICENSE
 LazyData: no
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
+ValidationKey: 26061000
