--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: lusweave
 Type: Package
 Title: Sweave/Knitr Utilities
-Version: 1.46.0
-Date: 2018-11-15
+Version: 1.46.1
+Date: 2021-09-03
 Authors@R: c(person("Markus", "Bonsch", role = "aut"),
              person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
              person("David", "Klein", email = "dklein@pik-potsdam.de", role = "aut"),
@@ -16,5 +16,6 @@ URL: https://github.com/pik-piam/lusweave, https://doi.org/10.5281/zenodo.115859
 BugReports: https://github.com/pik-piam/lusweave/issues
 License: BSD_2_clause + file LICENSE
 LazyData: no
-RoxygenNote: 6.1.0
-ValidationKey: 26061000
+RoxygenNote: 7.1.1
+Suggests: 
+    covr
