--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,15 +7,21 @@ Authors@R: c(person("Markus", "Bonsch", role = "aut"),
              person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
              person("David", "Klein", email = "dklein@pik-potsdam.de", role = "aut"),
              person("Florian", "Humpenoeder", email = "humpenoeder@pik-potsdam.de", role = "aut"))
-Description: Set of tools which simplify the usage of SWeave/Knitr in R and allow to easily create PDF files from within R.
-Depends: R(>= 2.10.0), methods
-Imports: xtable,  
-	 knitr,
-	 utils
-URL: https://github.com/pik-piam/lusweave, https://doi.org/10.5281/zenodo.1158594
+Description:
+  Set of tools which simplify the usage of SWeave/Knitr in R and allow to easily create PDF files from within R.
+Depends:
+  R(>= 2.10.0),
+  methods
+Imports:
+  xtable,
+  knitr
+Suggests:
+  covr
+URL:
+  https://github.com/pik-piam/lusweave,
+  https://doi.org/10.5281/zenodo.1158594
 BugReports: https://github.com/pik-piam/lusweave/issues
 License: BSD_2_clause + file LICENSE
 LazyData: no
 RoxygenNote: 7.1.1
-Suggests: 
-    covr
+Encoding: UTF-8
