--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,27 @@
 Package: lusweave
 Type: Package
 Title: Sweave/Knitr Utilities
-Version: 1.46.0
-Date: 2018-11-15
+Version: 1.46.1
+Date: 2021-09-03
 Authors@R: c(person("Markus", "Bonsch", role = "aut"),
              person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
              person("David", "Klein", email = "dklein@pik-potsdam.de", role = "aut"),
              person("Florian", "Humpenoeder", email = "humpenoeder@pik-potsdam.de", role = "aut"))
-Description: Set of tools which simplify the usage of SWeave/Knitr in R and allow to easily create PDF files from within R.
-Depends: R(>= 2.10.0), methods
-Imports: xtable,  
-	 knitr,
-	 utils
-URL: https://github.com/pik-piam/lusweave, https://doi.org/10.5281/zenodo.1158594
+Description:
+  Set of tools which simplify the usage of SWeave/Knitr in R and allow to easily create PDF files from within R.
+Depends:
+  R(>= 2.10.0),
+  methods
+Imports:
+  xtable,
+  knitr
+Suggests:
+  covr
+URL:
+  https://github.com/pik-piam/lusweave,
+  https://doi.org/10.5281/zenodo.1158594
 BugReports: https://github.com/pik-piam/lusweave/issues
 License: BSD_2_clause + file LICENSE
 LazyData: no
-RoxygenNote: 6.1.0
-ValidationKey: 26061000
+RoxygenNote: 7.1.1
+Encoding: UTF-8
