--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(swfigure)
 export(swlatex)
 export(swopen)
 export(swtable)
+import(methods)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(utils,Sweave)
 importFrom(utils,data)
+importFrom(utils,packageVersion)
 importFrom(xtable,xtable)
