--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,28 @@
-Package: lusweave
 Type: Package
+Package: lusweave
 Title: Sweave/Knitr Utilities
-Version: 1.46.1
-Date: 2021-09-03
-Authors@R: c(person("Markus", "Bonsch", role = "aut"),
-             person("Jan Philipp", "Dietrich", email = "dietrich@pik-potsdam.de", role = c("aut","cre")),
-             person("David", "Klein", email = "dklein@pik-potsdam.de", role = "aut"),
-             person("Florian", "Humpenoeder", email = "humpenoeder@pik-potsdam.de", role = "aut"))
-Description:
-  Set of tools which simplify the usage of SWeave/Knitr in R and allow to easily create PDF files from within R.
-Depends:
-  R(>= 2.10.0),
-  methods
-Imports:
-  xtable,
-  knitr
-Suggests:
-  covr
-URL:
-  https://github.com/pik-piam/lusweave,
-  https://doi.org/10.5281/zenodo.1158594
-BugReports: https://github.com/pik-piam/lusweave/issues
+Version: 1.46.2
+Date: 2022-02-09
+Authors@R: c(
+    person("Markus", "Bonsch", role = "aut"),
+    person("Jan Philipp", "Dietrich", , "dietrich@pik-potsdam.de", role = c("aut", "cre")),
+    person("David", "Klein", , "dklein@pik-potsdam.de", role = "aut"),
+    person("Florian", "Humpenoeder", , "humpenoeder@pik-potsdam.de", role = "aut")
+  )
+Description: Set of tools which simplify the usage of SWeave/Knitr in R
+    and allow to easily create PDF files from within R.
 License: BSD_2_clause + file LICENSE
-LazyData: no
-RoxygenNote: 7.1.1
+URL: https://github.com/pik-piam/lusweave,
+    https://doi.org/10.5281/zenodo.1158594
+BugReports: https://github.com/pik-piam/lusweave/issues
+Depends:
+    methods,
+    R (>= 2.10.0)
+Imports:
+    knitr (<= 1.36),
+    xtable
+Suggests:
+    covr
 Encoding: UTF-8
+LazyData: no
+RoxygenNote: 7.1.2
