--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Type: Package
 Package: lusweave
 Title: Sweave/Knitr Utilities
-Version: 1.46.2
-Date: 2022-02-10
+Version: 1.46.3
+Date: 2022-04-04
 Authors@R: c(
     person("Markus", "Bonsch", role = "aut"),
     person("Jan Philipp", "Dietrich", , "dietrich@pik-potsdam.de", role = c("aut", "cre")),
@@ -19,13 +19,12 @@ Depends:
     methods,
     R (>= 2.10.0)
 Imports:
-    knitr,
+    knitr (>= 1.38),
     xtable
 Suggests:
     covr,
     testthat (>= 3.0.0),
     withr
-Remotes: chroetz/knitr@fix-Sweave2knitr
 Encoding: UTF-8
 LazyData: no
 RoxygenNote: 7.1.2
