--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Type: Package
 Package: lusweave
 Title: Sweave/Knitr Utilities
-Version: 1.46.3
-Date: 2022-04-04
+Version: 1.46.4
+Date: 2025-07-14
 Authors@R: c(
     person("Markus", "Bonsch", role = "aut"),
     person("Jan Philipp", "Dietrich", , "dietrich@pik-potsdam.de", role = c("aut", "cre")),
@@ -20,12 +20,12 @@ Depends:
     R (>= 2.10.0)
 Imports:
     knitr (>= 1.38),
+    withr,
     xtable
 Suggests:
     covr,
-    testthat (>= 3.0.0),
-    withr
+    testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: no
-RoxygenNote: 7.1.2
+RoxygenNote: 7.3.2
 Config/testthat/edition: 3
